# docs/swagger.yaml
@@ -1,6 +1,12 @@
 info:
-  contact: {}
+  contact:
+    email: zor@cqiserv.com
+    name: CQI-SERVICES
+    url: http://www.cqiserv.com/
+  description: This is a sample API server .
   license: {}
+  title: 金流SERVER API
+  version: 2020.1.08.1.1.3.1.a
 paths:
   /json_post:
     post:
@@ -28,4 +34,57 @@ paths:
           schema:
             type: string
       summary: JSONtestPost
+  /list:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - description: cqikey
+        in: formData
+        name: cqikey
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"status":"SUCCESS"}'
+          schema:
+            type: string
+        "400":
+          description: '{"status":"FAIL"}'
+          schema:
+            type: string
+      summary: ListServer
+      tags:
+      - Admin
+  /register:
+    post:
+      consumes:
+      - application/x-www-form-urlencoded
+      parameters:
+      - description: Name
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: cqikey
+        in: formData
+        name: cqikey
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"name":"test","token":"123456","status":"SUCCESS"}'
+          schema:
+            type: string
+        "400":
+          description: '{"status":"FAIL"}'
+          schema:
+            type: string
+      summary: RegisterServer
+      tags:
+      - Admin
 swagger: "2.0"
