# routers/router.go
@@ -2,8 +2,10 @@ package router
 
 import (
 	// cash-server/docs swag DOC
+	config "cash-server/configs"
 	_ "cash-server/docs"
 	"cash-server/pkg/util"
+	"cash-server/routers/api/admin"
 	pay "cash-server/routers/api/pay"
 	"fmt"
 	"io"
@@ -21,53 +23,77 @@ var (
 
 //InitRouter 初始化路由表
 func InitRouter() *gin.Engine {
-	//log init
-	ginlog()
-	util.Info(" < - ROUTER START - > ")
-	//關閉DEBUG
-	gin.SetMode(gin.ReleaseMode)
+	//Mode switch
+	switch config.GetGlobalConfig().RunMode {
+	case "release":
+		gin.SetMode(gin.ReleaseMode)
+		ginlog()
+		util.Info(" < - ROUTER START - > ")
+	case "test":
+		gin.SetMode(gin.TestMode)
+	case "debug":
+		gin.SetMode(gin.DebugMode)
+	}
 	r := gin.Default()
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
-
 	r.StaticFile("/favicon.ico", "./favicon.ico")
 	r.Static("/statics", "./statics")
-
-	//POST test
-	r.POST("/form_post", pay.UrlencodedPost)
-	//POST test
-	r.POST("/json_post", pay.JSONtestPost)
-	r.POST("/forget", pay.PayIndex)
-
-	//輸入
-	r.GET("/putkey/:key", func(context *gin.Context) {
-		key = context.Param("key")
-		fmt.Printf("Hello, %s", key)
-	})
-	//output
-	r.GET("/getkey", func(context *gin.Context) {
-		if key != "" {
-			context.String(http.StatusOK, key)
-			fmt.Printf("key is %s", key)
-		} else {
-			context.String(http.StatusOK, "No key.")
-			fmt.Println("No key.")
-		}
+	// 根目錄
+	r.Any("/", func(context *gin.Context) {
+		context.String(http.StatusOK, "hello i'm gin server")
 	})
 
-	// 添加 Get 请求路由
-	r.GET("/", func(context *gin.Context) {
-		context.String(http.StatusOK, "hello gin")
-	})
-	//ping
-	r.GET("/ping", func(c *gin.Context) {
-		c.JSON(200, gin.H{
-			"message": "pong",
+	//Group pay1
+	pay1 := r.Group("pay1")
+	{
+		//POST test
+		pay1.POST("/form_post", pay.UrlencodedPost)
+		//POST test
+		pay1.POST("/json_post", pay.JSONtestPost)
+		pay1.POST("/forget", pay.PayIndex)
+	}
+
+	//Group testrouter
+	testrouter := r.Group("testrouter")
+	{
+		//ping
+		testrouter.GET("/ping", func(c *gin.Context) {
+			c.JSON(200, gin.H{
+				"message": "pong",
+			})
 		})
-	})
-	//swag interface
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+		//input
+		r.GET("/putkey/:key", func(context *gin.Context) {
+			key = context.Param("key")
+			fmt.Printf("Hello, %s", key)
+		})
+		//output
+		r.GET("/getkey", func(context *gin.Context) {
+			if key != "" {
+				context.String(http.StatusOK, key)
+				fmt.Printf("key is %s", key)
+			} else {
+				context.String(http.StatusOK, "No key.")
+				fmt.Println("No key.")
+			}
+		})
+	}
 
+	//Group admin
+	v1 := r.Group("admin")
+	{
+		//register  提供註冊
+		v1.POST("/register", admin.RegisterServer)
+		//list   查詢
+		v1.POST("/list", admin.ListServer)
+	}
+	//system 相關
+	if config.GetGlobalConfig().Swagger == true {
+		//swag interface
+		r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	}
+	r.NoRoute(NoResponse)
 	return r
 }
 
@@ -81,6 +107,14 @@ func ginlog() {
 	if err != nil {
 		fmt.Println("Open Log File Failed", err)
 	}
-
 	gin.DefaultWriter = io.MultiWriter(f)
+}
+
+//NoResponse 请求的url不存在，返回404
+func NoResponse(c *gin.Context) {
+	//返回404状态码
+	c.JSON(http.StatusNotFound, gin.H{
+		"status": 404,
+		"error":  "404, page not exists!",
+	})
 }
